@@ -15,6 +15,9 @@ Bug-Fixes:
 Hibernate Plugin: When a statement like "from Kv k where k." was completed the fields for k. 
 would come from any arbitrary mapped class which name started with Kv
 
+Refactoring Plugin: When generating DROP TABLE statements, Frontbase requires
+CASCADE or RESTRICT.  Now we append CASCADE to the DROP TABLE statement.
+
 1820792: Sybase ASE - table not shown in object browser
 1821354: Changing default value of a column in Derby does nothing
 1820214: 2.5.1 DB aliases do not transfer properly to 2.6.1
